# goost-benchmark

./: Benchmark.cpp  Benchmark.h  CMakeLists.txt  IDEAS.md  IOFactory.h  Impl.h  KeyContainer.h  LICENSE  MagmaCfbSinkFactory.cpp  MagmaCfbSinkFactory.h  MagmaEcbSSE3SinkFactory.cpp  MagmaEcbSSE3SinkFactory.h  MagmaEcbSinkFactory.cpp  MagmaEcbSinkFactory.h  MemorySink.cpp  MemorySink.h  NullSink.cpp  NullSink.h  OpensslSink.cpp  OpensslSink.h  OpensslSinkFactory.cpp  OpensslSinkFactory.h  README.md  SSE3Alg.cpp  SSE3Alg.h  SSE3EcbIOFactory.cpp  SSE3EcbIOFactory.h  SinkFactory.h  SinkImpl.cpp  SinkImpl.h  StringKeyContainer.cpp  StringKeyContainer.h  TransparentSinkFactory.cpp  TransparentSinkFactory.h  conanfile.txt  main.cpp  reference.cpp
.github/workflows/: build.yml
